--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "mobbit"
 description = "A CLI for better mobbing."
-version = "0.1.1"
+version = "0.2.0"
 authors = ["Dillon Fagan <dillonfagan@pm.me>"]
 homepage = "https://github.com/dillonfagan/mobbit"
 repository = "https://github.com/dillonfagan/mobbit"
@@ -14,3 +14,4 @@ edition = "2018"
 [dependencies]
 clap = "2.33.0"
 console = "0.11.2"
+indicatif = "0.14.0"
